--- a/Puerto de Indias/Venetian.html
+++ b/Puerto de Indias/Venetian.html
@@ -2154,29 +2154,20 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i44.image.css:image/base/css*/
 #i44 { opacity: 1; }
 /*#/#*//*#i44.i45.positioning.css:positioning/base/css.2*/
-#i44 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 362px; height: 136px;
-        -ms-transform: translate(0, 0) translate(-21px, 353px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(-21px, 353px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(-21px, 353px) rotate(0deg);
-        transform: translate(0, 0) translate(-21px, 353px) rotate(0deg);
+#i44 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 382px; height: 143px;
+        -ms-transform: translate(0, 0) translate(-31px, 337px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(-31px, 337px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(-31px, 337px) rotate(0deg);
+        transform: translate(0, 0) translate(-31px, 337px) rotate(0deg);
 }
 /*#/#*//*#i46.image.css:image/base/css*/
 #i46 { opacity: 1; }
 /*#/#*//*#i46.i47.positioning.css:positioning/base/css.2*/
 #i46 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 130px; height: 35px;
-        -ms-transform: translate(0, 0) translate(101px, 418px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(101px, 418px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(101px, 418px) rotate(0deg);
-        transform: translate(0, 0) translate(101px, 418px) rotate(0deg);
-}
-/*#/#*//*#i63.text.css:text/base/css*/
-#i63 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Anglecia-Pro-Title-W01-Bold_1"; font-size: 25px; color: #565656; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
-/*#/#*//*#i63.i64.positioning.css:positioning/base/css.2*/
-#i63 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 245px; height: 27px;
-        -ms-transform: translate(0, 0) translate(37px, 269px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(37px, 269px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(37px, 269px) rotate(0deg);
-        transform: translate(0, 0) translate(37px, 269px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(101px, 406px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(101px, 406px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(101px, 406px) rotate(0deg);
+        transform: translate(0, 0) translate(101px, 406px) rotate(0deg);
 }
 /*#/#*//*#i16.i17.positioning.css:positioning/base/css.2*/
 #i16 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 40px; height: 40px;
@@ -2295,11 +2286,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i101.image.css:image/base/css*/
 #i101 { opacity: 1; }
 /*#/#*//*#i101.i102.positioning.css:positioning/base/css.2*/
-#i101 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 35px; height: 54px;
-        -ms-transform: translate(0, 0) translate(138px, 370px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(138px, 370px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(138px, 370px) rotate(0deg);
-        transform: translate(0, 0) translate(138px, 370px) rotate(0deg);
+#i101 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 45px; height: 69px;
+        -ms-transform: translate(0, 0) translate(131px, 347px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(131px, 347px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(131px, 347px) rotate(0deg);
+        transform: translate(0, 0) translate(131px, 347px) rotate(0deg);
 }
 /*#/#*//*#i103.font-local.css:font/font-local/css*/
 /*#i103.i104.font-local.css:font-local/css.1*/
@@ -2313,14 +2304,14 @@ url('fonts/') format('opentype'),
 url('fonts/') format('svg');
 }
 /*#/#*/
-/*#/#*//*#i105.text.css:text/base/css*/
-#i105 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Anglecia-Pro-Title-W01-Bold_1"; font-size: 24px; color: #eb9baf; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+/*#/#*//*#i105.image.css:image/base/css*/
+#i105 { opacity: 1; }
 /*#/#*//*#i105.i106.positioning.css:positioning/base/css.2*/
-#i105 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 228px; height: 81px;
-        -ms-transform: translate(0, 0) translate(47px, 294px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(47px, 294px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(47px, 294px) rotate(0deg);
-        transform: translate(0, 0) translate(47px, 294px) rotate(0deg);
+#i105 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 320px; height: 64px;
+        -ms-transform: translate(0, 0) translate(0px, 267px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 267px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 267px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 267px) rotate(0deg);
 }
 /*#/#*/
 </style>
@@ -2342,8 +2333,6 @@ url('fonts/') format('svg');
 <img id="i44" src="https://i.imgur.com/q57qlU6.jpg"/>
 <!--#/#--><!--#i46.image.html:image/html-->
 <img id="i46" src="https://i.imgur.com/UhmS6ks.png"/>
-<!--#/#--><!--#i63.text.html:text/html-->
-<div id="i63">In Rácket, ask for</div>
 <!--#/#--><!--#i16.image.html:image/html-->
 <img id="i16" src="https://i.imgur.com/AqxeEoY.png"/>
 <!--#/#--><!--#i68.shape.html:shape/html-->
@@ -2357,10 +2346,10 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i83.image.html:image/html-->
 <img id="i83" src="https://i.imgur.com/YN2Vf5g.png"/>
 <!--#/#--><!--#i101.image.html:image/html-->
-<img id="i101" src="https://i.imgur.com/0p6NYkv.png"/>
+<img id="i101" src="https://i.imgur.com/TqJQe86.png"/>
 <!--#/#--><!--#i103.font.html:font/html-->
-<!--#/#--><!--#i105.text.html:text/html-->
-<div id="i105">“a Pink Puerto and tonic, por favor”</div>
+<!--#/#--><!--#i105.image.html:image/html-->
+<img id="i105" src="https://i.imgur.com/70gboFT.jpg"/>
 <!--#/#--><!--#/#--><!--#js:common/js-->
 <script>
 /*#i30.i31.positioning.js:positioning/base/js.2*/
@@ -2417,8 +2406,6 @@ bmShow('i44');
 
 /*#/#*//*#i46.i47.positioning.js:positioning/base/js.2*/
 bmShow('i46');
-/*#/#*//*#i63.i64.positioning.js:positioning/base/js.2*/
-bmShow('i63');
 /*#/#*//*#i16.image.js:image/base/js*/
 
 /*#/#*//*#i16.i17.positioning.js:positioning/base/js.2*/
@@ -2510,7 +2497,7 @@ var el = document.getElementById('i83');
 
 el.addEventListener('click', function(e){
     /*#i95.i96.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://goo.gl/maps/HshgM3tsakq'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status= https://goo.gl/maps/HshgM3tsakq'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2521,6 +2508,8 @@ if ('click' === 'click') {
 
 /*#/#*//*#i101.i102.positioning.js:positioning/base/js.2*/
 bmShow('i101');
+/*#/#*//*#i105.image.js:image/base/js*/
+
 /*#/#*//*#i105.i106.positioning.js:positioning/base/js.2*/
 bmShow('i105');
 /*#/#*//*#i9.visibility.js:visibility/js*/
@@ -2561,10 +2550,6 @@ name: UhmS6ks.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i46.i47.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i63.text.meta:text/meta*/
-name: In Rácket, ask for; customName: false;
-/*#/#*//*#i63.i64.positioning.meta:positioning/meta.2*/
-data: /*!*/{}/*!*/;
 /*#/#*//*#i16.image.meta:image/meta*/
 name: AqxeEoY.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
@@ -2594,14 +2579,15 @@ customName: false;
 /*#/#*//*#i83.i84.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i101.image.meta:image/meta*/
-name: 0p6NYkv.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+name: TqJQe86.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i101.i102.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i103.font.meta:font/meta*/
 name: Web Font: Anglecia-Pro-Title-W01-Bold_1; type: font-local; customName: ;
-/*#/#*//*#i105.text.meta:text/meta*/
-name: “a Pink Puerto and tonic, por favor”; customName: false;
+/*#/#*//*#i105.image.meta:image/meta*/
+name: 70gboFT.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: false;
 /*#/#*//*#i105.i106.positioning.meta:positioning/meta.2*/
-data: /*!*/{}/*!*/;
+data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*/--><!--#/#-->
