--- a/Puerto de Indias/Cube.html
+++ b/Puerto de Indias/Cube.html
@@ -799,7 +799,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i5.i236.image.html:image/html-->
 <img id="i236" src="https://i.imgur.com/UhmS6ks.png"/>
 <!--#/#--><!--#i5.i247.image.html:image/html-->
-<img id="i247" src="https://i.imgur.com/0p6NYkv.png"/>
+<img id="i247" src="https://i.imgur.com/TqJQe86.png"/>
 <!--#/#--><!--#i5.i95.shape.html:shape/html-->
 <div id="i95"></div>
 <!--#/#-->
