--- a/Puerto de Indias/Cube2.html
+++ b/Puerto de Indias/Cube2.html
@@ -225,11 +225,20 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i9 { background-color: #ffffff; opacity: 1;
 }
 /*#/#*//*#i9.i10.positioning.css:positioning/base/css.2*/
-#i9 { position: absolute; top: 0px; left: 0px; overflow: hidden; width: 100%; height: 100%;
-        -ms-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        transform: translate(0, 0) translate(0, 0) rotate(0deg);
+#i9 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 100%;
+        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+}
+/*#/#*//*#i8.i200.image.css:image/base/css*/
+#i200 { opacity: 1; }
+/*#/#*//*#i200.i201.positioning.css:positioning/base/css.2*/
+#i200 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 230px; height: 38px;
+        -ms-transform: translate(0, 0) translate(35px, 179px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(35px, 179px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(35px, 179px) rotate(0deg);
+        transform: translate(0, 0) translate(35px, 179px) rotate(0deg);
 }
 /*#/#*//*#i8.i60.image.css:image/base/css*/
 #i60 { opacity: 1; }
@@ -240,23 +249,14 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
         transform: translate(0, 0) translate(0, 0) rotate(0deg);
 }
-/*#/#*//*#i8.i76.text.css:text/base/css*/
-#i76 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Anglecia-Pro-Title-W01-Bold_1"; font-size: 18px; color: #565656; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
-/*#/#*//*#i76.i77.positioning.css:positioning/base/css.2*/
-#i76 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 250px; height: 16px;
-        -ms-transform: translate(0, 0) translate(24px, 176px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(24px, 176px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(24px, 176px) rotate(0deg);
-        transform: translate(0, 0) translate(24px, 176px) rotate(0deg);
-}
 /*#/#*//*#i8.i152.image.css:image/base/css*/
 #i152 { opacity: 1; }
 /*#/#*//*#i152.i153.positioning.css:positioning/base/css.2*/
 #i152 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 40px; height: 40px;
-        -ms-transform: translate(0, 0) translate(252px, 206px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(252px, 206px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(252px, 206px) rotate(0deg);
-        transform: translate(0, 0) translate(252px, 206px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(256px, 208px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(256px, 208px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(256px, 208px) rotate(0deg);
+        transform: translate(0, 0) translate(256px, 208px) rotate(0deg);
 }
 /*#/#*//*#i8.i106.image.css:image/base/css*/
 #i106 { opacity: 1; }
@@ -303,15 +303,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -webkit-transform: translate(0, 0) translate(65px, 220px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(65px, 220px) rotate(0deg);
         transform: translate(0, 0) translate(65px, 220px) rotate(0deg);
-}
-/*#/#*//*#i8.i200.text.css:text/base/css*/
-#i200 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Anglecia-Pro-Title-W01-Bold_1"; font-size: 16px; color: #eb9baf; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
-/*#/#*//*#i200.i201.positioning.css:positioning/base/css.2*/
-#i200 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 199px; height: 40px;
-        -ms-transform: translate(0, 0) translate(50px, 195px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(50px, 195px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(50px, 195px) rotate(0deg);
-        transform: translate(0, 0) translate(50px, 195px) rotate(0deg);
 }
 /*#/#*//*#i19.i20.shape.css:shape/base/css*/
 #i20 { background-color: #ffffff; opacity: 1;
@@ -565,10 +556,10 @@ url('fonts/') format('svg');
 <div id="i8" class="adf-Panel ">
     <!--#i8.i9.shape.html:shape/html-->
 <div id="i9"></div>
+<!--#/#--><!--#i8.i200.image.html:image/html-->
+<img id="i200" src="https://i.imgur.com/vRpZxll.jpg"/>
 <!--#/#--><!--#i8.i60.image.html:image/html-->
 <img id="i60" src="https://i.imgur.com/zV2gv6q.jpg"/>
-<!--#/#--><!--#i8.i76.text.html:text/html-->
-<div id="i76">In Rácket, ask for</div>
 <!--#/#--><!--#i8.i152.image.html:image/html-->
 <img id="i152" src="https://i.imgur.com/AqxeEoY.png"/>
 <!--#/#--><!--#i8.i106.image.html:image/html-->
@@ -581,8 +572,6 @@ url('fonts/') format('svg');
 <img id="i172" src="https://i.imgur.com/ObtrzfY.png"/>
 <!--#/#--><!--#i8.i176.image.html:image/html-->
 <img id="i176" src="https://i.imgur.com/YN2Vf5g.png"/>
-<!--#/#--><!--#i8.i200.text.html:text/html-->
-<div id="i200">“a Pink Puerto and tonic, por favor”</div>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i4.i19.cube-panel.html:cube-panel/html.1-->
@@ -681,12 +670,14 @@ cube_i4.init();
 
 /*#/#*//*#i9.i10.positioning.js:positioning/base/js.2*/
 bmShow('i9');
+/*#/#*//*#i8.i200.image.js:image/base/js*/
+
+/*#/#*//*#i200.i201.positioning.js:positioning/base/js.2*/
+bmShow('i200');
 /*#/#*//*#i8.i60.image.js:image/base/js*/
 
 /*#/#*//*#i60.i61.positioning.js:positioning/base/js.2*/
 bmShow('i60');
-/*#/#*//*#i76.i77.positioning.js:positioning/base/js.2*/
-bmShow('i76');
 /*#/#*//*#i8.i152.image.js:image/base/js*/
 
 /*#/#*//*#i152.i153.positioning.js:positioning/base/js.2*/
@@ -770,8 +761,6 @@ el.addEventListener('click', function(e){
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
-/*#/#*//*#i200.i201.positioning.js:positioning/base/js.2*/
-bmShow('i200');
 /*#/#*//*#i8.i52.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 var el = document.getElementById('i8');
@@ -879,6 +868,7 @@ if ('click' === 'click') {
 /*#/#*//*#i19.i54.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 var el = document.getElementById('i19');
+
 
 
 if ('click' === 'click') {
@@ -1088,15 +1078,16 @@ data: /*!*/{"mode":"advanced"}/*!*/;
 name: Background;
 /*#/#*//*#i9.i10.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
+/*#/#*//*#i8.i200.image.meta:image/meta*/
+name: vRpZxll.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: false;
+/*#/#*//*#i200.i201.positioning.meta:positioning/meta.2*/
+data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i8.i60.image.meta:image/meta*/
 name: zV2gv6q.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i60.i61.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i8.i76.text.meta:text/meta*/
-name: In Rácket, ask for; customName: false;
-/*#/#*//*#i76.i77.positioning.meta:positioning/meta.2*/
-data: /*!*/{}/*!*/;
 /*#/#*//*#i8.i152.image.meta:image/meta*/
 name: AqxeEoY.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
@@ -1126,10 +1117,6 @@ name: YN2Vf5g.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i176.i177.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i8.i200.text.meta:text/meta*/
-name: “a Pink Puerto and tonic, por favor”; customName: false;
-/*#/#*//*#i200.i201.positioning.meta:positioning/meta.2*/
-data: /*!*/{}/*!*/;
 /*#/#*//*#i4.i19.cube-panel.meta:cube-panel/meta.1*/
     name: Cube Panel 2;
 /*#/#*//*#i19.i20.shape.meta:shape/meta*/
