--- a/H&M Marzo/Venetian.html
+++ b/H&M Marzo/Venetian.html
@@ -2145,7 +2145,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 }
 
 /*#/#*//*#i2.i3.positioning.css:positioning/base/css.1*/
-#i2 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 320px; height: 266px;
+#i2 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 320px; height: 300px;
         -ms-transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
@@ -2154,18 +2154,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i44.image.css:image/base/css*/
 #i44 { opacity: 1; }
 /*#/#*//*#i46.i47.positioning.css:positioning/base/css.2*/
-#i46 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 160px; height: 45px;
-        -ms-transform: translate(0, 0) translate(80px, 401px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(80px, 401px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(80px, 401px) rotate(0deg);
-        transform: translate(0, 0) translate(80px, 401px) rotate(0deg);
-}
-/*#/#*//*#i16.i17.positioning.css:positioning/base/css.2*/
-#i16 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 56px; height: 35px;
-        -ms-transform: translate(0, 0) translate(260px, 448px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(260px, 448px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(260px, 448px) rotate(0deg);
-        transform: translate(0, 0) translate(260px, 448px) rotate(0deg);
+#i46 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 140px; height: 39px;
+        -ms-transform: translate(0, 0) translate(180px, 439px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(180px, 439px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(180px, 439px) rotate(0deg);
+        transform: translate(0, 0) translate(180px, 439px) rotate(0deg);
 }
 /*#/#*//*#slice.css:slice/globalcss*/
 
@@ -2226,34 +2219,23 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     visibility: hidden !important;
 }
 /*#/#*//*#i44.i45.positioning.css:positioning/base/css.2*/
-#i44 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 322px; height: 93px;
-        -ms-transform: translate(0, 0) translate(0px, 352px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, 352px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, 352px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, 352px) rotate(0deg);
+#i44 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 320px; height: 116px;
+        -ms-transform: translate(0, 0) translate(0px, 371px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 371px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 371px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 371px) rotate(0deg);
 }
 /*#/#*//*#i46.image.css:image/base/css*/
 #i46 { opacity: 1; }
 /*#/#*//*#i63.text.css:text/base/css*/
-#i63 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 21px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i63 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 17px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i63.i64.positioning.css:positioning/base/css.2*/
-#i63 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 65px;
-        -ms-transform: translate(0, 0) translate(13px, 273px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(13px, 273px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(13px, 273px) rotate(0deg);
-        transform: translate(0, 0) translate(13px, 273px) rotate(0deg);
+#i63 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 303px; height: 52px;
+        -ms-transform: translate(0, 0) translate(9px, 316px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(9px, 316px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(9px, 316px) rotate(0deg);
+        transform: translate(0, 0) translate(9px, 316px) rotate(0deg);
 }
-/*#/#*//*#i65.text.css:text/base/css*/
-#i65 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 14px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
-/*#/#*//*#i65.i66.positioning.css:positioning/base/css.2*/
-#i65 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 279px; height: 38px;
-        -ms-transform: translate(0, 0) translate(27px, 320px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(27px, 320px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(27px, 320px) rotate(0deg);
-        transform: translate(0, 0) translate(27px, 320px) rotate(0deg);
-}
-/*#/#*//*#i16.image.css:image/base/css*/
-#i16 { opacity: 1; }
 /*#/#*//*#i68.shape.css:shape/base/css*/
 #i68 { background-color: ; opacity: 1;
 }
@@ -2268,11 +2250,38 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i73 { background-color: ; opacity: 1;
 }
 /*#/#*//*#i73.i74.positioning.css:positioning/base/css.2*/
-#i73 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 18.958333333333332%;
+#i73 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 26.458333333333332%;
         -ms-transform: translate(0, 0) translate(0px, 352px) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(0px, 352px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(0px, 352px) rotate(0deg);
         transform: translate(0, 0) translate(0px, 352px) rotate(0deg);
+}
+/*#/#*//*#i81.image.css:image/base/css*/
+#i81 { opacity: 1; }
+/*#/#*//*#i81.i82.positioning.css:positioning/base/css.2*/
+#i81 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 23px; height: 23px;
+        -ms-transform: translate(0, 0) translate(7px, 452px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(7px, 452px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(7px, 452px) rotate(0deg);
+        transform: translate(0, 0) translate(7px, 452px) rotate(0deg);
+}
+/*#/#*//*#i83.image.css:image/base/css*/
+#i83 { opacity: 1; }
+/*#/#*//*#i83.i84.positioning.css:positioning/base/css.2*/
+#i83 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 23px; height: 23px;
+        -ms-transform: translate(0, 0) translate(36px, 452px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(36px, 452px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(36px, 452px) rotate(0deg);
+        transform: translate(0, 0) translate(36px, 452px) rotate(0deg);
+}
+/*#/#*//*#i85.image.css:image/base/css*/
+#i85 { opacity: 1; }
+/*#/#*//*#i85.i86.positioning.css:positioning/base/css.2*/
+#i85 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 23px; height: 23px;
+        -ms-transform: translate(0, 0) translate(65px, 452px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(65px, 452px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(65px, 452px) rotate(0deg);
+        transform: translate(0, 0) translate(65px, 452px) rotate(0deg);
 }
 /*#/#*/
 </style>
@@ -2283,29 +2292,29 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i4.slice-image.html:slice-image/html-->
-<dataimg id="i4" src="https://i.imgur.com/2YYIdh8.jpg"></dataimg>
+<dataimg id="i4" src="https://i.imgur.com/cLPV9tX.jpg"></dataimg>
 <!--#/#--><!--#i2.i5.slice-image.html:slice-image/html-->
-<dataimg id="i5" src="https://i.imgur.com/bfHVGcj.jpg"></dataimg>
+<dataimg id="i5" src="https://i.imgur.com/THZBWfN.jpg"></dataimg>
 <!--#/#--><!--#i2.i6.slice-image.html:slice-image/html-->
-<dataimg id="i6" src="https://i.imgur.com/w6cZmT2.jpg"></dataimg>
-<!--#/#--><!--#i2.i72.slice-image.html:slice-image/html.1-->
-<dataimg id="i72" src="https://i.imgur.com/qKNHjx9.jpg"></dataimg>
+<dataimg id="i6" src="https://i.imgur.com/omyIvFm.jpg"></dataimg>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i44.image.html:image/html-->
-<img id="i44" src="https://i.imgur.com/kwxr1mX.jpg"/>
+<img id="i44" src="https://i.imgur.com/jUmq202.jpg"/>
 <!--#/#--><!--#i46.image.html:image/html-->
 <img id="i46" src="https://i.imgur.com/ViMLmas.png"/>
 <!--#/#--><!--#i63.text.html:text/html-->
-<div id="i63">¡¡Apertura el 25 de Febrero en La Isla Mérida!!</div>
-<!--#/#--><!--#i65.text.html:text/html-->
-<div id="i65">Sé de los 100 primeros en la fila y llévate una tarjeta regalo de 300 MXN</div>
-<!--#/#--><!--#i16.image.html:image/html-->
-<img id="i16" src="https://i.imgur.com/P2bTbkX.jpg"/>
+<div id="i63">celebra con nosotros nuestra nueva tienda H&M en Forum Cuernavaca.</div>
 <!--#/#--><!--#i68.shape.html:shape/html-->
 <div id="i68"></div>
 <!--#/#--><!--#i73.shape.html:shape/html-->
 <div id="i73"></div>
+<!--#/#--><!--#i81.image.html:image/html-->
+<img id="i81" src="https://i.imgur.com/mJBNNLr.png"/>
+<!--#/#--><!--#i83.image.html:image/html-->
+<img id="i83" src="https://i.imgur.com/ObtrzfY.png"/>
+<!--#/#--><!--#i85.image.html:image/html-->
+<img id="i85" src="https://i.imgur.com/YN2Vf5g.png"/>
 <!--#/#--><!--#/#--><!--#js:common/js-->
 <script>
 /*#i30.i31.positioning.js:positioning/base/js.2*/
@@ -2354,8 +2363,6 @@ document.addEventListener('DOMContentLoaded', function() {
 
 /*#/#*//*#i2.i6.slice-image.js:slice-image/base/js*/
 
-/*#/#*//*#i2.i72.slice-image.js:slice-image/base/js.1*/
-
 /*#/#*//*#i44.image.js:image/base/js*/
 
 /*#/#*//*#i44.i45.positioning.js:positioning/base/js.2*/
@@ -2366,21 +2373,15 @@ bmShow('i44');
 bmShow('i46');
 /*#/#*//*#i63.i64.positioning.js:positioning/base/js.2*/
 bmShow('i63');
-/*#/#*//*#i65.i66.positioning.js:positioning/base/js.2*/
-bmShow('i65');
-/*#/#*//*#i16.image.js:image/base/js*/
-
-/*#/#*//*#i16.i17.positioning.js:positioning/base/js.2*/
-bmShow('i16');
 /*#/#*//*#i68.i69.positioning.js:positioning/base/js.2*/
 bmShow('i68');
-/*#/#*//*#i68.i70.actions.js:actions/base/js.1*/
+/*#/#*//*#i68.i77.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 var el = document.getElementById('i68');
 
 el.addEventListener('click', function(e){
-    /*#i70.i71.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.hm.com/mx/'), dhtml.getVar('landingPageTarget', '_blank'));
+    /*#i77.i78.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.hm.com/mx/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2389,13 +2390,64 @@ if ('click' === 'click') {
 }
 /*#/#*//*#i73.i74.positioning.js:positioning/base/js.2*/
 bmShow('i73');
-/*#/#*//*#i73.i75.actions.js:actions/base/js.1*/
+/*#/#*//*#i73.i79.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 var el = document.getElementById('i73');
 
 el.addEventListener('click', function(e){
-    /*#i75.i76.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/DUKV5QXZzmT2'), dhtml.getVar('landingPageTarget', '_blank'));
+    /*#i79.i80.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://goo.gl/maps/Uo15jpoxB262'), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
+
+if ('click' === 'click') {
+    el.style.cursor = 'pointer';
+}
+/*#/#*//*#i81.image.js:image/base/js*/
+
+/*#/#*//*#i81.i82.positioning.js:positioning/base/js.2*/
+bmShow('i81');
+/*#/#*//*#i81.i87.actions.js:actions/base/js.1*/
+/* Name: On Click; */
+var el = document.getElementById('i81');
+
+el.addEventListener('click', function(e){
+    /*#i87.i88.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://www.facebook.com/sharer/sharer.php?u=https://goo.gl/maps/Uo15jpoxB262'), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
+
+if ('click' === 'click') {
+    el.style.cursor = 'pointer';
+}
+/*#/#*//*#i83.image.js:image/base/js*/
+
+/*#/#*//*#i83.i84.positioning.js:positioning/base/js.2*/
+bmShow('i83');
+/*#/#*//*#i83.i89.actions.js:actions/base/js.1*/
+/* Name: On Click; */
+var el = document.getElementById('i83');
+
+el.addEventListener('click', function(e){
+    /*#i89.i90.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'http://www.victoriassecret.mx'), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
+
+if ('click' === 'click') {
+    el.style.cursor = 'pointer';
+}
+/*#/#*//*#i85.image.js:image/base/js*/
+
+/*#/#*//*#i85.i86.positioning.js:positioning/base/js.2*/
+bmShow('i85');
+/*#/#*//*#i85.i91.actions.js:actions/base/js.1*/
+/* Name: On Click; */
+var el = document.getElementById('i85');
+
+el.addEventListener('click', function(e){
+    /*#i91.i92.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG5')) : window.open(dhtml.getVar('clickTAG5', 'https://twitter.com/home?status=https://goo.gl/maps/Uo15jpoxB262'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2423,18 +2475,15 @@ data: /*!*/{}/*!*/;
 name: Slice 1;
 customName: ;
 /*#/#*//*#i2.i4.slice-image.meta:slice-image/meta*/
-name: 2YYIdh8.jpg; fileId: ; sourceTypeId: externalUrl;
+name: cLPV9tX.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i5.slice-image.meta:slice-image/meta*/
-name: bfHVGcj.jpg; fileId: ; sourceTypeId: externalUrl;
+name: THZBWfN.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i6.slice-image.meta:slice-image/meta*/
-name: w6cZmT2.jpg; fileId: ; sourceTypeId: externalUrl;
-/*#/#*//*#i2.i72.slice-image.meta:slice-image/meta.1*/
-name: qKNHjx9.jpg; fileId: ; sourceTypeId: externalUrl;
-customName: false;
+name: omyIvFm.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i44.image.meta:image/meta*/
-name: kwxr1mX.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+name: jUmq202.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i44.i45.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":false}/*!*/;
@@ -2444,18 +2493,9 @@ customName: false;
 /*#/#*//*#i46.i47.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i63.text.meta:text/meta*/
-name: ¡¡Apertura el 25 de Febrero en La Isla Mérida!!; customName: false;
+name: celebra con nosotros nuestra nueva tienda H&M en Forum Cuernavaca.; customName: false;
 /*#/#*//*#i63.i64.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
-/*#/#*//*#i65.text.meta:text/meta*/
-name: Se de los 100 primeros en la fila y llévate una tarjeta regalo de 300 MXN; customName: false;
-/*#/#*//*#i65.i66.positioning.meta:positioning/meta.2*/
-data: /*!*/{}/*!*/;
-/*#/#*//*#i16.image.meta:image/meta*/
-name: P2bTbkX.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: false;
-/*#/#*//*#i16.i17.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i68.shape.meta:shape/meta*/
 name: Shape 2;
 /*#/#*//*#i68.i69.positioning.meta:positioning/meta.2*/
@@ -2464,4 +2504,19 @@ data: /*!*/{}/*!*/;
 name: Shape 3;
 /*#/#*//*#i73.i74.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
+/*#/#*//*#i81.image.meta:image/meta*/
+name: mJBNNLr.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: false;
+/*#/#*//*#i81.i82.positioning.meta:positioning/meta.2*/
+data: /*!*/{"keepAspectRatio":true}/*!*/;
+/*#/#*//*#i83.image.meta:image/meta*/
+name: ObtrzfY.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: false;
+/*#/#*//*#i83.i84.positioning.meta:positioning/meta.2*/
+data: /*!*/{"keepAspectRatio":true}/*!*/;
+/*#/#*//*#i85.image.meta:image/meta*/
+name: YN2Vf5g.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: false;
+/*#/#*//*#i85.i86.positioning.meta:positioning/meta.2*/
+data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*/--><!--#/#-->
