--- a/H&M Marzo/fade-completo.html
+++ b/H&M Marzo/fade-completo.html
@@ -104,7 +104,7 @@
 
          .cta {
             position: absolute;
-            margin-top: 452px;
+            margin-top: 455px;
             width:230px;
             line-height: 1.3em;
             z-index: 5;
@@ -356,7 +356,7 @@
        <div class="te-container">
 
     
-  <div class="cta"> <a href=" https://goo.gl/maps/Uo15jpoxB262" target="_blank"> <img src="https://i.imgur.com/ViMLmas.png" style="height: 45px;"></a></div>   
+  <div class="cta"> <a href=" https://goo.gl/maps/Uo15jpoxB262" target="_blank"> <img src="https://i.imgur.com/5xUBE8Y.png" style="height: 35px;"></a></div>   
   
      
   
